k8s/orcaslicer/resources/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 0
  strategy:
    type: Recreate
  template:
    spec:
      nodeSelector:
        nvidia.com/gpu.present: 'true'
      runtimeClassName: nvidia
      volumes:
        - name: config-volume
          persistentVolumeClaim:
            claimName: config-volume
      containers:
        - name: orcaslicer
          image: lscr.io/linuxserver/orcaslicer:2.0.0
          resources:
            limits:
              nvidia.com/gpu: 1
          volumeMounts:
            - name: config-volume
              mountPath: /config
          ports:
            - name: web
              containerPort: 3000
