k8s/orcaslicer/resources/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    gethomepage.dev/href: 'https://orca.durbin.casa'
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/app: orcaslicer
    gethomepage.dev/group: Apps
    gethomepage.dev/icon: kasm
    gethomepage.dev/name: Orca Slicer
spec:
  ingressClassName: nginx
  rules:
    - host: orca.durbin.casa
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: service
                port:
                  name: web
